<resources>
    <string name="app_name">2023_q2_elmirov</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="et_name_hint">Enter name</string>
    <string name="et_password_hint">Enter password</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="show_manual_text">SHOW MANUAL</string>
    <string name="apply_loan_text">APPLY LOAN</string>
    <string name="my_loans_text">MY LOANS</string>

    <string name="error_internet_text">Check your internet connection</string>
    <string name="error_http400_text">User with name \"%s\" already exist</string>
    <string name="error_http403_text">Something wrong, try to login in app again</string>
    <string name="error_http404_text">Check entered data</string>
    <string name="error_http404_loan_text">Loan not found, update your loans</string>
    <string name="error_unknown_text">Something wrong, we will fix it soon</string>
    <string name="error_invalid_input_text">Field can not be empty</string>
    <string name="conditions_title_text">YOUR LOAN CONDITIONS:</string>
    <string name="max_amount_title_text">Maximum loan amount:</string>
    <string name="percent_title_text">Loan percentage:</string>
    <string name="period_title_text">Loan period:</string>
    <string name="enter_data_title_text">ENTER DATA:</string>
    <string name="et_amount_hint">Enter amount</string>
    <string name="et_first_name_hint">Enter first name</string>
    <string name="et_last_name_hint">Enter last name</string>
    <string name="et_phone_number_hint">Enter phone number</string>
    <string name="status_approved">APPROVED</string>
    <string name="status_registered">Your loan application has been registered.\n\nExpect a decision.</string>
    <string name="status_rejected">REJECTED</string>
    <string name="error_invalid_input_amount">Amount must be in range 1 to %s</string>
    <string name="b_ok_text">OK</string>
    <string name="update_text">UPDATE</string>
    <string name="amount_title">Loan amount:</string>
    <string name="issue_date_title">Issue date:</string>
    <string name="first_name_title">First name:</string>
    <string name="last_name_title">Last name:</string>
    <string name="phone_number_title">Phone number:</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="loan_manual">HOW TO APPLY LOAN\n\n1) Click on button \"APPLY LOAN\"\n\n2) Enter your data\n\n3) Expect a decision</string>
    <string name="loans_manual">HOW TO GET OWN LOANS\n\n1) Click on button \"MY LOANS\"\n\n2) Scroll your loans\n\n3) Click on loan to get full information</string>
    <string name="no_loans">You have not received any loans</string>
    <string name="how_get_loan">To get a loan, contact the bank or \n\nuse the bank\'s application.</string>
    <string name="amount">Amount:</string>
    <string name="null_binding">Cannot access binding because it is null. Is the view visible?</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="login_again">LOGIN AGAIN</string>
</resources>