<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="REJECTED" />

    <TextView
        android:id="@+id/amount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/amount_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_status" />

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@id/amount_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/percent_title"
        app:layout_constraintTop_toTopOf="@id/amount_title"
        tools:text="sdfpijsdkipfsd" />

    <TextView
        android:id="@+id/date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/issue_date_title"
        app:layout_constraintStart_toStartOf="@id/amount_title"
        app:layout_constraintTop_toBottomOf="@id/amount_title" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@id/date_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_amount"
        app:layout_constraintTop_toTopOf="@id/date_title"
        tools:text="sdfpijsdkipfsd" />

    <TextView
        android:id="@+id/first_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/first_name_title"
        app:layout_constraintStart_toStartOf="@id/date_title"
        app:layout_constraintTop_toBottomOf="@id/date_title" />

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@id/first_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_amount"
        app:layout_constraintTop_toTopOf="@id/first_name_title"
        tools:text="sdfpijsdkipfsd" />

    <TextView
        android:id="@+id/last_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/last_name_title"
        app:layout_constraintStart_toStartOf="@id/first_name_title"
        app:layout_constraintTop_toBottomOf="@id/first_name_title" />

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@id/last_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_amount"
        app:layout_constraintTop_toTopOf="@id/last_name_title"
        tools:text="sdfpijsdkipfsd" />

    <TextView
        android:id="@+id/percent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/percent_title_text"
        app:layout_constraintStart_toStartOf="@id/last_name_title"
        app:layout_constraintTop_toBottomOf="@id/last_name_title" />

    <TextView
        android:id="@+id/tv_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@id/percent_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_amount"
        app:layout_constraintTop_toTopOf="@id/percent_title"
        tools:text="sdfpijsdkipfsd" />

    <TextView
        android:id="@+id/period_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/period_title_text"
        app:layout_constraintStart_toStartOf="@id/percent_title"
        app:layout_constraintTop_toBottomOf="@id/percent_title" />

    <TextView
        android:id="@+id/tv_period"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@id/period_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_amount"
        app:layout_constraintTop_toTopOf="@id/period_title"
        tools:text="sdfpijsdkipfsd" />

    <TextView
        android:id="@+id/phone_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number_title"
        app:layout_constraintStart_toStartOf="@id/period_title"
        app:layout_constraintTop_toBottomOf="@id/period_title" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@id/phone_number_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_amount"
        app:layout_constraintTop_toTopOf="@id/phone_number_title"
        tools:text="sdfpijsdkipfsd" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>